changes in MTA file

--- a/mta.yaml
+++ b/mta.yaml
@@ -27,6 +27,36 @@ modules:
     - npm install
     - npm run build:cf
     supported-platforms: []
+- name: project1-destination-content
+  type: com.sap.application.content
+  requires:
+  - name: project1-destination-service
+    parameters:
+      content-target: true
+  - name: project1-repo-host
+    parameters:
+      service-key:
+        name: project1-repo-host-key
+  - name: uaa_project1
+    parameters:
+      service-key:
+        name: uaa_project1-key
+  parameters:
+    content:
+      instance:
+        destinations:
+        - Name: demo_project1_repo_host
+          ServiceInstanceName: project1-html5-srv
+          ServiceKeyName: project1-repo-host-key
+          sap.cloud.service: demo
+        - Authentication: OAuth2UserTokenExchange
+          Name: demo_uaa_project1
+          ServiceInstanceName: project1-xsuaa-service
+          ServiceKeyName: uaa_project1-key
+          sap.cloud.service: demo
+        existing_destinations_policy: ignore
+  build-parameters:
+    no-source: true
 resources:
 - name: project1-repo-host
   type: org.cloudfoundry.managed-service
@@ -38,20 +68,18 @@ resources:
   type: org.cloudfoundry.managed-service
   parameters:
     config:
-      HTML5Runtime_enabled: false
-      init_data:
-        instance:
-          destinations:
-          - Authentication: NoAuthentication
-            Name: ui5
-            ProxyType: Internet
-            Type: HTTP
-            URL: https://ui5.sap.com
-          existing_destinations_policy: update
+      HTML5Runtime_enabled: true
       version: 1.0.0
     service: destination
     service-name: project1-destination-service
     service-plan: lite
+- name: uaa_project1
+  type: org.cloudfoundry.managed-service
+  parameters:
+    path: ./xs-security.json
+    service: xsuaa
+    service-name: project1-xsuaa-service
+    service-plan: application
 parameters:
   deploy_mode: html5-repo
   enable-parallel-deployments: true
